<resources>
    <string name="app_name">会讲</string>
    <string name="server_error">服务器错误</string>
    <string name="sr_list_header_hint_normal">下拉刷新</string>
    <string name="sr_list_header_hint_ready">松开刷新</string>
    <string name="sr_list_header_hint_loading">加载中…</string>
    <string name="network_click_retry">网络加载出错, 点击屏幕重试</string>
    <string name="toast_network_abort">加载失败</string>
    <string name="connect_timeout">请求超时，请检查当前网络</string>
    <string name="network_disabled">当前网络不可用，请检查网络配置</string>
    <string name="user_photo_permission">请开启拍照权限</string>
    <string name="user_album_permission">请开启查看相册权限</string>
    <string name="user_message_permission">请开启短信及存储权限</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="well">好</string>
    <string name="affirm">确认</string>
    <string name="toast_hint_input">请输入</string>
    <string name="toast_hint_select">请选择</string>
    <string name="toast_hint_upload">请上传</string>
    <string name="second_unit">s</string>
    <string name="account_frozen">账号冻结</string>
    <string name="remain">提示</string>
    <string name="photo_film">相机胶卷</string>
    <string name="online">在线</string>
    <string name="live">直播中</string>
    <string name="no_start">未开始</string>
    <string name="click_start_live">请点击开始直播</string>
    <string name="live_fail">直播失败</string>
    <string name="no_camera_permission">摄像头未开启,\n请确认是否开启授权</string>
    <string name="live_stop_remind_minute">还有%d分钟，直播将自动关闭</string>
    <string name="live_stop_remind_second">还有%d秒，直播将自动关闭</string>
    <string name="live_stream_insufficient">流量不足，即将关闭视频直播！</string>
    <string name="ok">知道了</string>
    <string name="exit_success">退出成功</string>
    <string name="live_will_pause">直播将暂停</string>
    <string name="click_start_live_audio">准备好了?点击开始直播</string>
    <string name="audio_live_stop_remind">直播将在%d分钟后结束</string>
    <string name="click_start_live_now_start_live">点“立即直播”后将立即开始直播。</string>
    <string name="start_live_now">立即直播</string>
    <string name="record_live_stop">结束直播</string>
    <string name="no_record_permission">声音权限已关闭，请到设置开启声音\n权限。</string>
    <string name="rerecording_remind">重录将覆盖原有录音</string>
    <string name="play_fail">播放失败</string>
    <string name="record_fail">录音失败</string>
    <string name="switch_live_record_device">有另一台设备尝试主持直播!</string>
    <string name="switch_common_record_device">有另一台设备尝试主持录播!</string>
    <string name="continue_host">继续主持</string>
    <string name="affirm_exit">确认退出(%ds)</string>
    <string name="join_fail">进入失败</string>
    <string name="record_time_remind">每张最长10分钟</string>
    <string name="audition">试听</string>
    <string name="record">录制</string>
    <string name="continue_record">续录</string>
    <string name="record_pause">录制已暂停</string>
    <string name="rerecording">重录</string>
    <string name="record_time_insufficient_remind">剩余录制时间不足%d分钟</string>
    <string name="record_ing_slide_remind">请录制完成当前页后再到下一页</string>
    <string name="slide_can_not_rerecording">滑动将无法继续录制!</string>
    <string name="record_ing">录音中...</string>
    <string name="dialog_title_hint">提示</string>
    <string name="return_home">返回首页</string>
    <string name="to_open_permission">去开启</string>
    <string name="slide_end">滑动结束</string>
    <string name="start_star">开启星评</string>
    <string name="record_last_page_remind">结束录制后可以添加配乐、选择主题和预览哦</string>
    <string name="record_course_delete">该讲本已删除，点确认将返回首页</string>
    <string name="confirm_back">确认返回</string>
    <string name="adv_skip">跳过</string>
    <string name="start_experience">立即体验</string>
    <string name="login_wechat">微信登录</string>
    <string name="login_jx">敬信</string>
    <string name="have_agree_to">登录即表示您已同意</string>
    <string name="protocol">《会讲服务协议》</string>
    <string name="protocol_oversea">《CSPmeeting服务协议》</string>
    <string name="other_login_type">其他方式</string>
    <string name="Register_indicate_have_read">注册表示您已阅读，并同意</string>
    <string name="mobile">手机号</string>
    <string name="email">邮箱</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="to_register">我要注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="input_pwd">输入密码</string>
    <string name="input_login_pwd">密码</string>
    <string name="input_phone_number">输入手机号</string>
    <string name="input_captcha">输入验证码</string>
    <string name="captcha">验证码</string>
    <string name="input_nickname">输入昵称</string>
    <string name="confirm_login">确认登录</string>
    <string name="get_captcha">获取验证码</string>
    <string name="captcha_login">验证登录</string>
    <string name="find_pwd">找回密码</string>
    <string name="send_email">发送验证邮件</string>
    <string name="input_register_email">请输入注册时使用的邮箱</string>
    <string name="register">注册</string>
    <string name="immediately_register">确认注册</string>
    <string name="pwd_err">密码错误</string>
    <string name="get_captcha_frequently">获取验证码次数频繁，请稍后</string>
    <string name="send_captcha">已发送验证码</string>
    <string name="phone_have_been_register">该手机已注册，是否立即登录？</string>
    <string name="email_have_been_register">该邮箱已注册，是否立即登录？</string>
    <string name="immediately_login">立即登录</string>
    <string name="input_special_symbol">不能包含非法字符</string>
    <string name="input_right_pwd_num">请输入6〜24位密码</string>
    <string name="reset_pwd_to_email">重置密码链接已发送至您的邮箱</string>
    <string name="active_email">邮件已发送至您邮箱，请前往激活</string>
    <string name="back_to_login">%ds 返回登录</string>
    <string name="visit_csp">使用敬信数字平台账号访问 会讲</string>
    <string name="username">用户名</string>
    <string name="pwd">密码</string>
    <string name="authorization_login">授权并登录</string>
    <string name="Login_with_Facebook">Facebook登录</string>
    <string name="Login_with_Twitter">Twitter登录</string>
    <string name="auth_success">授权成功</string>
    <string name="auth_fail">授权失败</string>
    <string name="confirm_captcha">请确认手机号码</string>
    <string name="send_sms_captcha">将发送短信验证码到这个号码</string>
    <string name="login_welcome">欢迎你</string>
    <string name="login_moblie">手机登录</string>
    <string name="wechat">微信好友</string>
    <string name="moment">朋友圈</string>
    <string name="QQ">QQ</string>
    <string name="linkedin">领英</string>
    <string name="weibo">微博</string>
    <string name="message">短信</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="Line">Line</string>
    <string name="LinkedIn">LinkedIn</string>
    <string name="SMS">SMS</string>
    <string name="DingDing">钉钉</string>
    <string name="copy_link">复制链接</string>
    <string name="contribute">投稿</string>
    <string name="preview">预览</string>
    <string name="watch_pwd">观看密码</string>
    <string name="copy_ectype">复制副本</string>
    <string name="delete_speech">删除</string>
    <string name="editor">编辑</string>
    <string name="share_success">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="share_cancel">分享取消</string>
    <string name="share_title">会讲 | %s</string>
    <string name="share_text">我在用会讲，给图片/PPT加上了自己的声音。</string>
    <string name="ensure_delete">确认删除？</string>
    <string name="wx_check_app">您尚未安装微信客户端</string>
    <string name="whatsapp_check_app">您尚未安装whatsapp客户端</string>
    <string name="line_check_app">您尚未安装line客户端</string>
    <string name="affirm_copy">确认复制</string>
    <string name="main_title">讲本</string>
    <string name="overdue_reminder">已隐藏%d个讲本，请在WEB端登录查看</string>
    <string name="will_reminder">还有%d天到期</string>
    <string name="living">直播进行中...</string>
    <string name="playing">录播进行中...</string>
    <string name="click_continue">点击继续</string>
    <string name="scan">扫一扫</string>
    <string name="aim_at_the_code">请扫描Web端讲本二维码</string>
    <string name="fail_to_identify">请扫取会讲二维码</string>
    <string name="ready">请到网页添加讲本</string>
    <string name="copy_success">复制成功</string>
    <string name="main_record_dialog">另一台设备正在录播会议，继续可能\n中断该设备录播进度</string>
    <string name="main_live_dialog">另一台设备正在直播会议，继续可能\n中断该设备直播进度</string>
    <string name="main_record_continue">继续录制</string>
    <string name="confirm_continue">确定继续</string>
    <string name="choice_contents">请选择您要进行的内容</string>
    <string name="explain_meeting">讲解会议</string>
    <string name="live_video">视频直播</string>
    <string name="live_have_end">直播已结束</string>
    <string name="recorded">录播</string>
    <string name="delete_success">删除成功</string>
    <string name="service_agreement_oversea">CSPmeeting服务协议</string>
    <string name="service_agreement">会讲服务协议</string>
    <string name="click_again_exit">继续点击返回将关闭App</string>
    <string name="over_meeting">是否结束直播/录播?</string>
    <string name="over">结束</string>
    <string name="cancel_over">取消</string>
    <string name="share_meeting_playback">分享会议回放</string>
    <string name="have_new_version">发现新版本V%s</string>
    <string name="remind_later">稍后提醒</string>
    <string name="update_now">立即升级</string>
    <string name="download_ing">正在下载</string>
    <string name="already_download">已下载%d</string>
    <string name="download_fail">下载失败</string>
    <string name="click_install">点击安装</string>
    <string name="start_comment">星评</string>
    <string name="finish">完成</string>
    <string name="start_all_time">讲本总时长</string>
    <string name="data_matrix_grade">扫码可对该讲本进行评分</string>
    <string name="spread_your_insights">Spread your insights!</string>
    <string name="reb_finish">录播完成</string>
    <string name="live_finish">直播完成</string>
    <string name="live_continue">继续直播</string>
    <string name="live_start">立即直播</string>
    <string name="live_start_hint">点“立即直播”后将立即开始直播。</string>
    <string name="live_end">结束直播</string>
    <string name="end_live">直播结束</string>
    <string name="live_end_after">直播将在%s后结束</string>
    <string name="meet_time">演讲时长&#160;%s&#160;分钟</string>
    <string name="live_default_finish">10分钟</string>
    <string name="live_end_hint">结束后将停止星评操作</string>
    <string name="start_start_hint">启动星评将停止直播，是否确认？</string>
    <string name="home_continue_record">继续录制</string>
    <string name="home_continue_record_content">系统检测到上次录制时意外退出，是\n否继续？</string>
    <string name="save">保存</string>
    <string name="photo">照片</string>
    <string name="add_meet">新建讲本</string>
    <string name="make_meet">生成讲本</string>
    <string name="upload_photo">上传图片</string>
    <string name="upload_photo_max">最多%d张照片</string>
    <string name="exit_edit">退出此次编辑？</string>
    <string name="to_set_photo">请您设置允许会讲访问您的照片->设置->隐私->照片</string>
    <string name="to_set_camera">去设置里面打开相机就可以拍照啦！</string>
    <string name="to_set">去设置</string>
    <string name="open">开启</string>
    <string name="add_theme">添加主题</string>
    <string name="add_music">添加音乐</string>
    <string name="add">添加</string>
    <string name="course_already_delete">该讲本已删除</string>
    <string name="please_edit_other_course">请尝试编辑其他讲本</string>
    <string name="person_center">个人中心</string>
    <string name="person_center_avatar">头像</string>
    <string name="person_center_history">投稿历史</string>
    <string name="person_center_flow_manage">流量管理</string>
    <string name="person_center_vip_manage">会员管理</string>
    <string name="person_center_account_manage">账号管理</string>
    <string name="person_center_help_and_feedback">帮助与反馈</string>
    <string name="person_center_guide">新手指引</string>
    <string name="my_wallet">我的钱包</string>
    <string name="tax_explain_extract">企业取款: 提供完税发票\n个人取款: 完成所得税申报\n参考: </string>
    <string name="taw_law1">《中华人民共和国个人</string>
    <string name="taw_law2">所得税法》</string>
    <string name="extract_detail_company_info">企业信息</string>
    <string name="extract_detail_company_name">名称</string>
    <string name="extract_detail_bank_of_deposit">开户银行</string>
    <string name="extract_detail_bank_account">银行账号</string>
    <string name="extract_detail_invoice_type">发票类型</string>
    <string name="extract_detail_courier_company">快递公司</string>
    <string name="extract_detail_courier_number">快递单号</string>
</resources>