<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25dp">

        <LinearLayout
            style="@style/v.share">

            <ImageView
                android:id="@+id/dialog_share_iv_facebook"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/share_ic_facebook"/>

            <TextView
                style="@style/tv.share"
                android:text="@string/facebook"/>

        </LinearLayout>

        <LinearLayout
            style="@style/v.share">

            <ImageView
                android:id="@+id/dialog_share_iv_twitter"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/share_ic_twitter"/>

            <TextView
                style="@style/tv.share"
                android:text="@string/twitter"/>

        </LinearLayout>

        <LinearLayout
            style="@style/v.share">

            <ImageView
                android:id="@+id/dialog_share_iv_whatsapp"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/share_ic_whatsapp"/>

            <TextView
                style="@style/tv.share"
                android:text="@string/whatsapp"/>

        </LinearLayout>

        <LinearLayout
            style="@style/v.share">

            <ImageView
                android:id="@+id/dialog_share_iv_line"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/share_ic_line"/>

            <TextView
                style="@style/tv.share"
                android:text="@string/Line"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="35dp"
        android:paddingTop="32dp">

        <LinearLayout
            style="@style/v.share">

            <ImageView
                android:id="@+id/dialog_share_iv_linkedin"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/share_ic_linkedin"/>

            <TextView
                style="@style/tv.share"
                android:text="@string/LinkedIn"/>

        </LinearLayout>

        <LinearLayout
            style="@style/v.share">

            <ImageView
                android:id="@+id/dialog_share_iv_sms"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/share_ic_sms"/>

            <TextView
                style="@style/tv.share"
                android:text="@string/SMS"/>

        </LinearLayout>

        <LinearLayout
            style="@style/v.share">

            <ImageView
                android:id="@+id/dialog_share_iv_copy_link"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/share_ic_copy"/>

            <TextView
                style="@style/tv.share"
                android:text="@string/Copy_Link"/>

        </LinearLayout>

        <LinearLayout
            style="@style/v.share">
        </LinearLayout>
    </LinearLayout>

    <View
        style="@style/divider"
        android:background="@color/color_db"/>

    <TextView
        android:id="@+id/dialog_share_tv_contribute"
        style="@style/tv.dialog.share"
        android:text="@string/contribute"/>

    <View
        style="@style/divider"
        android:background="@color/color_db"/>

    <TextView
        android:id="@+id/dialog_share_tv_copy_replica"
        style="@style/tv.dialog.share"
        android:text="@string/copy_replica"/>

    <View
        style="@style/divider"
        android:background="@color/color_db"/>

    <TextView
        android:id="@+id/dialog_share_tv_delete"
        style="@style/tv.dialog.share"
        android:text="@string/delete_speech"
        android:textColor="@color/text_e43939"/>

    <View
        style="@style/divider"
        android:background="@color/color_db"/>

    <TextView
        android:id="@+id/dialog_share_tv_cancel"
        style="@style/tv.dialog.share"
        android:text="@string/cancel"/>

</LinearLayout>