<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/layout_dialog_share_platform_cn"/>

    </LinearLayout>



    <View
        style="@style/divider"
        android:background="@color/color_db"/>

    <TextView
        android:id="@+id/dialog_share_tv_contribute"
        style="@style/tv.dialog.share"
        android:text="@string/contribute"/>

    <View
        style="@style/divider"
        android:background="@color/color_db"/>

    <TextView
        android:id="@+id/dialog_share_tv_copy_replica"
        style="@style/tv.dialog.share"
        android:text="@string/copy_replica"/>

    <View
        style="@style/divider"
        android:background="@color/color_db"/>

    <TextView
        android:id="@+id/dialog_share_tv_delete"
        style="@style/tv.dialog.share"
        android:text="@string/delete_speech"
        android:textColor="@color/text_e43939"/>

    <View
        style="@style/divider"
        android:background="@color/color_db"/>

    <TextView
        android:id="@+id/dialog_share_tv_cancel"
        style="@style/tv.dialog.share"
        android:text="@string/cancel"/>

</LinearLayout>