<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_wallet_tax_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_wallet_tax"
        android:paddingBottom="8dp"
        android:paddingLeft="@dimen/margin"
        android:paddingRight="@dimen/margin"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/wallet_tv_tax_explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tax_explain_extract"
            android:textColor="@color/text_787c86"
            android:textSize="13dp"/>

        <TextView
            android:id="@+id/wallet_tv_taw_law1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/wallet_tv_tax_explain"
            android:layout_marginLeft="39dp"
            android:text="@string/taw_law1"
            android:textColor="@color/text_ace400"
            android:textSize="13dp"/>

        <TextView
            android:id="@+id/wallet_tv_taw_law2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wallet_tv_tax_explain"
            android:text="@string/taw_law2"
            android:textColor="@color/text_ace400"
            android:textSize="13dp"/>

    </RelativeLayout>
</RelativeLayout>