<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_ic_background2"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/login_welcome"
                android:textColor="@color/white"
                android:textSize="28dp"
                android:textStyle="bold"/>

            <include layout="@layout/layout_form_items"/>
        </LinearLayout>

        <TextView
            android:id="@+id/base_set_tv_set"
            style="@style/tv.common"
            android:layout_marginTop="32dp"/>

        <!-- 邮箱注册 -->
        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/login_tv_register"
                style="@style/tv.login.bottom"
                android:layout_marginRight="12dp"
                android:text="@string/to_register"/>

            <View
                android:layout_width="1dp"
                android:layout_height="14dp"
                android:background="@color/text_888"/>

            <TextView
                android:id="@+id/login_tv_forget_pwd"
                style="@style/tv.login.bottom"
                android:layout_marginLeft="12dp"
                android:text="@string/forget_pwd"/>
        </LinearLayout>
    </LinearLayout>

    <!-- 注册协议 -->
    <LinearLayout
        android:id="@+id/linea_layout_protocol"
        style="@style/v.login.foot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="27dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/have_agree_to"
            style="@style/tv.agree.protocol"
            android:text="@string/Register_indicate_have_read"/>

        <TextView
            android:id="@+id/service_agreement"
            style="@style/tv.agree.protocol"
            android:text="@string/protocol"/>
    </LinearLayout>

    <!-- 登录协议-->
    <LinearLayout
        android:id="@+id/layout_email_login"
        style="@style/v.login.foot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="27dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/agree_to"
            style="@style/tv.agree.protocol"/>

        <TextView
            android:id="@+id/protocol"
            style="@style/tv.agree.protocol"
            android:text="@string/protocol"/>
    </LinearLayout>

</RelativeLayout>
